Commentaires & refactoring